kubernetes/mflix-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mflix-service
  labels:
    service: mflix-service
  # annotations:
  #    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:xx-xxxx-x:xxxxxxxxx:xxxxxxx/xxxxx-xxxx-xxxx-xxxx-xxxxxxxxx #replace this value
  #    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
spec:
  type: LoadBalancer # NodePort # LoadBalancer   
  selector:
    app: mflix
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
    nodePort: 32000
