kubernetes/mflix-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: mflix-ingress
  namespace: default
spec:
  rules:
  - host: your_host_name
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mflix-service
            port:
              number: 80
