kubernetes/obmovies-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: obmovies-ingress
  namespace: default
spec:
  rules:
  - host: ec2-18-193-111-65.eu-central-1.compute.amazonaws.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: obmovies-service
            port:
              number: 80
